Fix grid gap

--- a/src/assets/css/_block.hero.pcss
+++ b/src/assets/css/_block.hero.pcss
@@ -12,7 +12,7 @@
     justify-content: center;
 
     @media (--screen-desktop-small) {
-      grid-gap: var(--spacing-n1);
+      grid-gap: var(--spacing-1);
       grid-template-columns: auto 50%;
     }
   }
